# synth-tab

./: Cargo.toml  README.md  build.gradle  build.sh  justfile
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AppMidiManager.cpp  MainActivity.cpp
app/src/main/java/co/realfit/example/: AppMidiManager.java  MainActivity.java  MidiDataHelper.java  MidiSpec.java
app/src/main/res/xml/: device_filter.xml
res/xml/: device_filter.xml
src/: android.rs  controls.rs  java.rs  lib.rs  scene.rs
src/synth/: mod.rs
