[package]
name = "android-iced-example"
version = "0.1.0"
edition = "2021"

[lib]
# name = "example"
# name = "android-iced-example"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
android_logger = "0.15"
android-activity = { version = "0.6", features = ["native-activity"] }
ndk-context = "0.1"
jni = { version = "0.21", features = ["invocation"] }
stepper-synth = { git = "https://github.com/calacuda/stepper-synth", branch = "feature", version = "0.1.0", default-features = false, features = ["tinyaudio", "anyhow", ] }
futures = "0.3"
tinyaudio = "1.1.0"
lazy_static = "1.5.0"
midi-control = { version = "0.2.2", default-features = false }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }

[dependencies.iced_core]
git = "https://github.com/ibaryshnikov/iced.git"
rev = "009bf6c"
# path = "../../iced/core"

[dependencies.iced_widget]
git = "https://github.com/ibaryshnikov/iced.git"
rev = "009bf6c"
# path = "../../iced/widget"
features = ["wgpu"]

[dependencies.iced_winit]
git = "https://github.com/ibaryshnikov/iced.git"
rev = "009bf6c"
# path = "../../iced/winit"

[dependencies.iced_wgpu]
git = "https://github.com/ibaryshnikov/iced.git"
rev = "009bf6c"
# path = "../../iced/wgpu"

# [patch.crates-io]
# softbuffer = { git = "https://github.com/MarijnS95/softbuffer.git", rev = "d5cc95a" } # branch = "android"

[package.metadata.android]
package = "com.example.android_iced_example"
build_targets = [ "aarch64-linux-android" ]
resources = "./res"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[[package.metadata.android.uses_feature]]
name = "android.hardware.usb.host"
required = true

[[package.metadata.android.uses_feature]]
name = "android.permission.POST_NOTIFICATIONS"
required = true

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.hardware.usb.action.USB_DEVICE_ATTACHED"]

# Please check <https://github.com/rust-mobile/cargo-apk/pull/67> if it fails.
# Otherwise comment out the lines below (request for permission purely at runtime).
[[package.metadata.android.application.activity.meta_data]]
name = "android.hardware.usb.action.USB_DEVICE_ATTACHED"
resource = "@xml/device_filter"
value = "true"
